# universal_gamepad

./: README.md  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/gamepad/: ButtonMapping.kt  GamepadInputManager.kt  GamepadPlugin.kt  GamepadStreamHandler.kt
android/src/main/kotlin/dev/universal_gamepad/: ButtonMapping.kt  GamepadInputManager.kt  GamepadPlugin.kt  GamepadStreamHandler.kt
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/gamepad_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: gamepad.podspec  universal_gamepad.podspec
ios/Classes/: ButtonMapping.swift  GCControllerManager.swift  GamepadPlugin.swift  GamepadStreamHandler.swift
lib/: universal_gamepad.dart
lib/src/: gamepad_api.dart  method_channel.dart  platform_interface.dart  web_platform.dart
lib/src/types/: gamepad_axis.dart  gamepad_button.dart  gamepad_event.dart  gamepad_info.dart
linux/: CMakeLists.txt  button_mapping.cc  button_mapping.h  evdev_manager.cc  evdev_manager.h  gamepad_plugin.cc  gamepad_plugin.h  gamepad_stream_handler.cc  gamepad_stream_handler.h  manette_manager.cc  manette_manager.h  sdl_manager.cc  sdl_manager.h
macos/: gamepad.podspec  universal_gamepad.podspec
macos/Classes/: ButtonMapping.swift  GCControllerManager.swift  GamepadPlugin.swift  GamepadStreamHandler.swift
test/: gamepad_test.dart  method_channel_test.dart
test/types/: gamepad_event_test.dart
windows/: CMakeLists.txt  button_mapping.cpp  button_mapping.h  gamepad_plugin.cpp  gamepad_plugin.h  gamepad_stream_handler.cpp  gamepad_stream_handler.h  sdl_manager.cpp  sdl_manager.h  xinput_manager.cpp  xinput_manager.h
windows/include/gamepad/: gamepad_plugin_c_api.h
