# The Flutter tooling requires that developers have CMake 3.10 or later
# installed. You should not increase this version, as doing so will cause
# the plugin to be incompatible with some combintions of Flutter, Linux,
# and CMake versions.
cmake_minimum_required(VERSION 3.10)

# Project-level configuration.
set(PROJECT_NAME "universal_gamepad")
project(${PROJECT_NAME} LANGUAGES C CXX)

# This value is used when generating builds using this plugin, so it must
# not be changed.
set(PLUGIN_NAME "universal_gamepad_plugin")

# Option to bundle libmanette from source instead of using system-installed.
option(BUNDLE_MANETTE "Fetch and statically link libmanette from source" OFF)

# Find required dependencies.
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk+-3.0)

if(BUNDLE_MANETTE)
  if(CMAKE_VERSION VERSION_LESS "3.11")
    message(FATAL_ERROR "BUNDLE_MANETTE requires CMake 3.11 or later (for FetchContent).")
  endif()

  include(FetchContent)
  FetchContent_Declare(
    libmanette
    URL https://github.com/GNOME/libmanette/archive/refs/tags/0.2.13.tar.gz
    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
  )
  FetchContent_Populate(libmanette)

  # libmanette's own dependencies (always shared).
  pkg_check_modules(GLIB REQUIRED IMPORTED_TARGET glib-2.0)
  pkg_check_modules(GOBJECT REQUIRED IMPORTED_TARGET gobject-2.0)
  pkg_check_modules(GIO REQUIRED IMPORTED_TARGET gio-2.0)
  pkg_check_modules(EVDEV REQUIRED IMPORTED_TARGET libevdev)
  pkg_check_modules(GUDEV IMPORTED_TARGET gudev-1.0)
  pkg_check_modules(HIDAPI IMPORTED_TARGET hidapi-hidraw)

  # Generate config.h (empty — libmanette sources include it but use no defines).
  file(WRITE "${libmanette_BINARY_DIR}/config.h" "/* Generated by CMake */\n")

  # Generate manette-version.h from template.
  set(MAJOR_VERSION 0)
  set(MINOR_VERSION 2)
  set(MICRO_VERSION 13)
  set(VERSION "0.2.13")
  configure_file(
    "${libmanette_SOURCE_DIR}/src/manette-version.h.in"
    "${libmanette_BINARY_DIR}/manette-version.h"
    @ONLY
  )

  # Compile GResource (embeds the SDL GameControllerDB mapping database).
  find_program(GLIB_COMPILE_RESOURCES glib-compile-resources REQUIRED)
  set(GRESOURCE_XML "${libmanette_SOURCE_DIR}/src/libmanette.gresource.xml")
  set(GRESOURCE_C "${libmanette_BINARY_DIR}/manette_resources.c")
  add_custom_command(
    OUTPUT "${GRESOURCE_C}"
    COMMAND ${GLIB_COMPILE_RESOURCES}
      --target=${GRESOURCE_C}
      --sourcedir=${libmanette_SOURCE_DIR}/src
      --generate-source
      ${GRESOURCE_XML}
    DEPENDS
      "${GRESOURCE_XML}"
      "${libmanette_SOURCE_DIR}/src/gamecontrollerdb"
    COMMENT "Compiling libmanette GResource (gamecontrollerdb)"
  )

  # Build libmanette as a static C library.
  add_library(manette_static STATIC
    "${GRESOURCE_C}"
    "${libmanette_SOURCE_DIR}/src/drivers/manette-steam-deck-driver.c"
    "${libmanette_SOURCE_DIR}/src/manette-backend.c"
    "${libmanette_SOURCE_DIR}/src/manette-device.c"
    "${libmanette_SOURCE_DIR}/src/manette-device-type.c"
    "${libmanette_SOURCE_DIR}/src/manette-evdev-backend.c"
    "${libmanette_SOURCE_DIR}/src/manette-event.c"
    "${libmanette_SOURCE_DIR}/src/manette-event-mapping.c"
    "${libmanette_SOURCE_DIR}/src/manette-hid-backend.c"
    "${libmanette_SOURCE_DIR}/src/manette-hid-driver.c"
    "${libmanette_SOURCE_DIR}/src/manette-inputs.c"
    "${libmanette_SOURCE_DIR}/src/manette-mapping.c"
    "${libmanette_SOURCE_DIR}/src/manette-mapping-manager.c"
    "${libmanette_SOURCE_DIR}/src/manette-mapping-error.c"
    "${libmanette_SOURCE_DIR}/src/manette-monitor.c"
    "${libmanette_SOURCE_DIR}/src/manette-monitor-iter.c"
    "${libmanette_SOURCE_DIR}/src/manette-version.c"
  )
  target_include_directories(manette_static PUBLIC
    "${libmanette_SOURCE_DIR}/src"   # libmanette.h and private headers
    "${libmanette_BINARY_DIR}"       # generated config.h + manette-version.h
  )
  target_compile_definitions(manette_static PRIVATE
    MANETTE_COMPILATION
    G_LOG_DOMAIN="Manette"
  )
  set_target_properties(manette_static PROPERTIES
    C_STANDARD 11
    POSITION_INDEPENDENT_CODE ON
  )
  target_link_libraries(manette_static PRIVATE
    PkgConfig::GLIB PkgConfig::GOBJECT PkgConfig::GIO PkgConfig::EVDEV
  )
  if(GUDEV_FOUND)
    target_compile_definitions(manette_static PRIVATE GUDEV_ENABLED)
    target_link_libraries(manette_static PRIVATE PkgConfig::GUDEV)
  endif()
  if(HIDAPI_FOUND)
    target_link_libraries(manette_static PRIVATE PkgConfig::HIDAPI)
  endif()

  set(MANETTE_AVAILABLE TRUE)
else()
  pkg_check_modules(MANETTE IMPORTED_TARGET manette-0.2)
  if(MANETTE_FOUND)
    set(MANETTE_AVAILABLE TRUE)
  else()
    set(MANETTE_AVAILABLE FALSE)
    message(WARNING "libmanette-0.2 not found. Gamepad support disabled. "
      "Install libmanette-0.2-dev or re-run with -DBUNDLE_MANETTE=ON.")
  endif()
endif()

# Define the plugin library target.
add_library(${PLUGIN_NAME} SHARED
  "gamepad_plugin.cc"
  "gamepad_stream_handler.cc"
  "manette_manager.cc"
  "button_mapping.cc"
)

# Apply standard settings to the plugin library (symbol visibility, etc).
apply_standard_settings(${PLUGIN_NAME})

# Symbols are hidden by default to reduce the chance of symbol collisions
# between plugins. This should not be removed; any symbols that should be
# exported should be explicitly exported with the FLUTTER_PLUGIN_EXPORT macro.
set_target_properties(${PLUGIN_NAME} PROPERTIES
  CXX_VISIBILITY_PRESET hidden
  CXX_STANDARD 17
)
target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)

# Source include directories and library dependencies.
target_include_directories(${PLUGIN_NAME} INTERFACE
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
)
target_link_libraries(${PLUGIN_NAME} PRIVATE flutter)
target_link_libraries(${PLUGIN_NAME} PRIVATE PkgConfig::GTK)

if(MANETTE_AVAILABLE)
  target_compile_definitions(${PLUGIN_NAME} PRIVATE HAVE_MANETTE=1)
  if(BUNDLE_MANETTE)
    target_link_libraries(${PLUGIN_NAME} PRIVATE manette_static)
    # The plugin needs libmanette's public headers for compilation.
    target_include_directories(${PLUGIN_NAME} PRIVATE
      "${libmanette_SOURCE_DIR}/src"
      "${libmanette_BINARY_DIR}"
    )
    # Prevent symbols from the static library leaking through the plugin .so.
    target_link_options(${PLUGIN_NAME} PRIVATE "-Wl,--exclude-libs,ALL")
  else()
    target_link_libraries(${PLUGIN_NAME} PRIVATE PkgConfig::MANETTE)
  endif()
else()
  target_compile_definitions(${PLUGIN_NAME} PRIVATE HAVE_MANETTE=0)
endif()
